--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>nexulous thrift</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Nexulous Thrift</title>
   <style>
-    body {
-	    overflow: hidden;
-	    position: relative;
-	    background: black;
-	    color: white;
-	    padding: 0;
-	    margin: 0;
-    }
+      body {
+        margin: 0px;
+        overflow: hidden;
+        background-color: #fff;
+      }
+      #target {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
   </style>
 </head>
 <body>
-  <script type="text/javascript" src="js/three.min.js"></script>
-  <script type="text/javascript" src="js/OculusRiftEffect.js"></script>
-  <script type="text/javascript" src="js/THREEx.DeviceOrientationState.js"></script>
-  <script type="text/javascript" src="js/nexulous.js"></script>
+  <div id="target"></div>
+
+  <script src="js/threejs/three.min.js"></script>
+  <script src="js/threejs/StereoEffect.js"></script>
+  <script src="js/threejs/DeviceOrientationControls.js"></script>
+  <script src="js/threejs/OrbitControls.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
   
 </body>
 </html>
